<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_for_main_screen"
    android:background="?attr/colorOfMainScreenButton"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivIctisLogo"
        android:layout_width="20dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ictis_logo" />

    <TextView
        android:id="@+id/tvMainHeader"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivIctisLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivIctisLogo"
        app:layout_constraintBottom_toBottomOf="@id/ivIctisLogo"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:text="@string/ictis" />

    <android.widget.Button
        android:id="@+id/bSchedule"
        style="@style/MainScreenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIctisLogo"
        app:layout_constraintBottom_toTopOf="@id/bNews"
        android:layout_marginVertical="@dimen/padding_for_main_screen"
        android:paddingHorizontal="76dp"
        app:layout_constraintVertical_chainStyle="spread"
        android:background="@drawable/background_for_main_screen_buttons"
        android:text="@string/schedule"
        android:drawableStart="@drawable/schedule_icon" />

    <android.widget.Button
        android:id="@+id/bNews"
        style="@style/MainScreenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bSchedule"
        app:layout_constraintBottom_toTopOf="@id/bStudentCabinet"
        android:paddingHorizontal="98dp"
        android:background="@drawable/background_for_main_screen_buttons"
        android:text="@string/news"
        android:drawableStart="@drawable/news_icon" />

    <android.widget.Button
        android:id="@+id/bStudentCabinet"
        style="@style/MainScreenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bNews"
        app:layout_constraintBottom_toTopOf="@id/bSettings"
        android:layout_marginVertical="@dimen/padding_for_main_screen"
        android:paddingHorizontal="44dp"
        android:background="@drawable/background_for_main_screen_buttons"
        android:text="@string/student_cabinet"
        android:drawableStart="@drawable/user_icon" />

    <android.widget.Button
        android:id="@+id/bSettings"
        style="@style/MainScreenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bStudentCabinet"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="80dp"
        android:background="@drawable/background_for_main_screen_buttons"
        android:text="@string/settings"
        android:drawableStart="@drawable/settings_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>